# nix-cache-proxy

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: config.rs  main.rs
